--- a/Contest/Codechef101/output/Minimize_Xor_Difference.dSYM/Contents/Info.plist
+++ b/Contest/Codechef101/output/Minimize_Xor_Difference.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.D_Matrix_Cascade</string>
+		<string>com.apple.xcode.dsym.Minimize_Xor_Difference</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
